--- a/resource/cbplus.css
+++ b/resource/cbplus.css
@@ -85,12 +85,13 @@
 	align-items: center;
 	justify-content: center;
 	position: relative;
+	background-color: #0C6A93;
 }
 
 .plusButton {
 	border-radius: 50%;
-	background-color: #e7e7e7;
-	color: black;
+	background-color: #F47321;
+	color: #FFFFFF;
 	border: none;
 	padding: 24px 48px;
 	cursor: pointer;
