--- a/resource/cbplus.css
+++ b/resource/cbplus.css
@@ -86,6 +86,8 @@
 	justify-content: center;
 	position: relative;
 	background-color: #0C6A93;
+	border: 1px solid #F47321;
+	margin: 0 -1px -1px 0;
 }
 
 .plusButton {
