--- a/resource/cbplus.css
+++ b/resource/cbplus.css
@@ -85,7 +85,7 @@
 	align-items: center;
 	justify-content: center;
 	position: relative;
-	background-color: #0C6A93;
+	background-color: #181a1b;
 	border: 1px solid #F47321;
 	margin: 0 -1px -1px 0;
 }
